<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_theme"
        android:title="Tema"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export"
        android:title="@string/menu_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import"
        android:title="@string/menu_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_check_update"
        android:title="@string/menu_check_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:title="Hjälp"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_version"
        android:title="Version"
        app:showAsAction="never" />

</menu>
